# CianPredict

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: CI.yml
data/interim/: scraped_cian_interim.csv
data/processed/: scraped_cian_processed.csv
data/raw/: scraped_cian_raw.csv
notebooks/: EDA_playground.ipynb  cian_scraper_playground.ipynb  data_preprocessing_playground.ipynb  hypo_playground.ipynb  ml_playground.ipynb
pages/: 1_Exploratory_Data_Analysis.py  2_Model_Prediction.py
src/: __init__.py
src/model/: model_fit_estimate.py
src/preprocessing/: __init__.py
src/preprocessing/cleaner/: raw_data_process.py
src/preprocessing/scraper/: cian_scraper.py
weights/: catboost_model.pth
